--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
       <section class="section about">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li class="list-item">
+          <ul class="list card-set">
+            <li class="list-item card-set-item">
               <img src="./image/box.jpg" alt="создание кода" width="370" height="294" />
             </li>
-            <li class="list-item">
+            <li class="list-item card-set-item">
               <img src="./image/box2.jpg" alt="создание приложения" width="370" height="294" />
             </li>
-            <li class="list-item">
+            <li class="list-item card-set-item">
               <img src="./image/box3.jpg" alt="дизайн" width="370" height="294" />
             </li>
           </ul>
@@ -109,8 +109,8 @@
       <section class="section persons">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list">
-            <li class="list-item">
+          <ul class="list card-set">
+            <li class="list-item card-set-item">
               <img
                 src="./image/img.jpg"
                 alt="фотография Игорь Демьяненко"
@@ -122,14 +122,14 @@
                 <p class="list-text" lang="en">Product Designer</p>
               </div>
             </li>
-            <li class="list-item">
+            <li class="list-item card-set-item">
               <img src="./image/img1.jpg" alt="фотография Ольга Репина" width="270" height="260" />
               <div class="person-descrip">
                 <h3 class="list-title">Ольга Репина</h3>
                 <p class="list-text" lang="en">Frontend Developer</p>
               </div>
             </li>
-            <li class="list-item">
+            <li class="list-item card-set-item">
               <img
                 src="./image/img2.jpg"
                 alt="фотография Николай Тарасов"
@@ -141,7 +141,7 @@
                 <p class="list-text" lang="en">Marketing</p>
               </div>
             </li>
-            <li class="list-item">
+            <li class="list-item card-set-item">
               <img
                 src="./image/img3.jpg"
                 alt="фотография Михаил Ермаков"
