--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,11 @@
           <!-- navigation link -->
           <ul class="list nav">
             <li class="nav-list">
-              <a class="link current nav-item" href="./index.html">Студия</a>
+              <a class="link nav-item" href="./index.html">Студия</a>
             </li>
-            <li class="nav-list"><a class="link nav-item" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-list">
+              <a class="link current nav-item" href="./portfolio.html">Портфолио</a>
+            </li>
             <li class="nav-list"><a class="link nav-item" href="#">Контакты</a></li>
           </ul>
           <!-- contact header -->
@@ -57,9 +59,13 @@
 
           <div>
             <ul class="list filter-btn">
-              <li><button class="current button" type="button">Все</button></li>
+              <li>
+                <button class="current button" type="button">Все</button>
+              </li>
               <li><button class="button" type="button">Веб-сайты</button></li>
-              <li><button class="button" type="button">Приложения</button></li>
+              <li>
+                <button class="button" type="button">Приложения</button>
+              </li>
               <li><button class="button" type="button">Дизайн</button></li>
               <li><button class="button" type="button">Маркетинг</button></li>
             </ul>
@@ -67,8 +73,8 @@
 
           <!-- article filter -->
 
-          <ul class="list exampl-list">
-            <li class="exampl-item">
+          <ul class="list exampl-list card-set">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img
                   class="portfolio-img"
@@ -84,7 +90,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img
                   src="./image/imgp2.jpg"
@@ -101,7 +107,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img src="./image/imgp3.jpg" alt="Ресторан Seafood" width="370" height="294" />
                 <div class="description-img">
@@ -111,7 +117,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img src="./image/imgp4.jpg" alt="Проект Prime" width="370" height="294" />
                 <div class="description-img">
@@ -121,7 +127,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img src="./image/imgp5.jpg" alt="Проект Boxes " width="370" height="294" />
                 <div class="description-img">
@@ -131,7 +137,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img
                   src="./image/imgp6.jpg"
@@ -146,7 +152,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img
                   src="./image/imgp7.jpg"
@@ -161,7 +167,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img src="./image/imgp8.jpg" alt="Проект LAB " width="370" height="294" />
                 <div class="description-img">
@@ -171,7 +177,7 @@
               </a>
             </li>
 
-            <li class="exampl-item">
+            <li class="exampl-item card-set-item">
               <a href="#" class="link">
                 <img src="./image/imgp9.jpg" alt="Growing Business " width="370" height="294" />
                 <div class="description-img">
