--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- advantages -->
       <section class="section advantages">
         <div class="container">
-          <h2 hidden class="section-title">Наши преимущества</h2>
+          <h2 class="visually-hidden section-title">Наши преимущества</h2>
           <ul class="list">
             <li class="list-item">
               <h3 class="list-title uppertext">Внимание к деталям</h3>
