--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <main>
       <section class="section section-portfolio">
         <div class="container">
-          <h1 class="visually-hidden" aria-hidden="true" tabindex="-1">Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
 
           <!-- filter -->
 
