--- a/index.html
+++ b/index.html
@@ -413,39 +413,44 @@
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo"></use>
+                  <use href="./image/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-1"></use></svg
-              ></a>
+                  <use href="./image/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-2"></use></svg
-              ></a>
+                  <use href="./image/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-3"></use></svg
-              ></a>
+                  <use href="../image/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-4"></use></svg
-              ></a>
+                  <use href="../image/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-5"></use></svg
-              ></a>
+                  <use href="../image/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
