--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="list-item">
               <div class="advantages-icon">
                 <svg width="70" height="70">
-                  <use href="../image/icons.svg#icon-antenna"></use>
+                  <use href="./image/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="list-title uppertext">Внимание к деталям</h3>
@@ -86,7 +86,7 @@
             <li class="list-item">
               <div class="advantages-icon">
                 <svg width="70" height="70">
-                  <use href="../image/icons.svg#icon-clock"></use>
+                  <use href="./image/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="list-title uppertext">Пунктуальность</h3>
@@ -97,7 +97,7 @@
             <li class="list-item">
               <div class="advantages-icon">
                 <svg width="70" height="70">
-                  <use href="../image/icons.svg#icon-diagram"></use>
+                  <use href="./image/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="list-title uppertext">Планирование</h3>
@@ -108,7 +108,7 @@
             <li class="list-item">
               <div class="advantages-icon">
                 <svg width="70" height="70">
-                  <use href="../image/icons.svg#icon-astronaut"></use>
+                  <use href="./image/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="list-title uppertext">Современные технологии</h3>
@@ -434,21 +434,21 @@
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-3"></use>
+                  <use href="./image/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-4"></use>
+                  <use href="./image/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-list-link" href="">
                 <svg class="client-icon" width="106" height="60">
-                  <use href="../image/icons.svg#icon-Logo-5"></use>
+                  <use href="./image/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
