--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                       aria-label="facebook"
                     >
                       <svg class="social-media-icon" width="20" height="20">
-                        <use href="../image/icons.svg#icon-facebook"></use>
+                        <use href="./image/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -395,7 +395,7 @@
                       aria-label="linkedin"
                     >
                       <svg class="social-media-icon" width="20" height="20">
-                        <use href="../image/icons.svg#icon-linkedin"></use>
+                        <use href="./image/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
